ron: update to v0.3 with JDK 25 direct APIs
Parse and render Clojure data directly across String, UTF-8 byte, and
bounded stream APIs. Add canonical output, the v0.3 corpus, JMH
coverage, and optional runtime Vector acceleration with scalar fallback.